--- a/app/src/main/res/layout/activity_identity_verification_failed.xml
+++ b/app/src/main/res/layout/activity_identity_verification_failed.xml
@@ -42,7 +42,7 @@
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_21sdp"
             android:fontFamily="@font/opensans_regular"
-            android:text="@string/iv_failedcontent"
+            android:text="@string/iv_verification_failed_content"
             android:textAlignment="center"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
@@ -71,7 +71,7 @@
                 android:layout_marginRight="@dimen/_21sdp"
                 android:layout_toRightOf="@id/failedcontent1"
                 android:fontFamily="@font/opensans_regular"
-                android:text="@string/iv_failedcontactex"
+                android:text="@string/contactus"
                 android:textColor="@color/primary_color"
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
