--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -12,65 +12,65 @@
         android:background="@drawable/backgrndbtmcornrs"
         android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/mask_group_16"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/_21sdp"
-                android:paddingTop="@dimen/_46sdp"
-                android:paddingEnd="@dimen/_21sdp"
-                android:paddingBottom="@dimen/_16sdp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/mask_group_16"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_21sdp"
+            android:paddingTop="@dimen/_46sdp"
+            android:paddingEnd="@dimen/_21sdp"
+            android:paddingBottom="@dimen/_16sdp">
 
-                <RelativeLayout
-                    android:id="@+id/rl_user_icon_layout"
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/circle_bg">
-
-                    <ImageView
-                        android:id="@+id/iv_user_icon"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/user_details"
-                        android:padding="2dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/acct_profile"
-                        android:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/tv_user_icon_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:fontFamily="@font/opensans_bold"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_20sdp"
-                        android:visibility="gone" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/tv_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/_9sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/dba_name"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11ssp" />
+            <RelativeLayout
+                android:id="@+id/rl_user_icon_layout"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/circle_bg">
 
                 <ImageView
+                    android:id="@+id/iv_user_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/user_details"
+                    android:padding="2dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/acct_profile"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_user_icon_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:scaleType="fitEnd"
-                    android:src="@drawable/ic_notifications" />
-            </LinearLayout>
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/opensans_bold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_20sdp"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_9sdp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_semibold"
+                android:text="@string/dba_name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_11ssp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:scaleType="fitEnd"
+                android:src="@drawable/ic_notifications" />
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -84,6 +84,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/ll_business_dashboard_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -581,7 +582,6 @@
                                 </LinearLayout>
                             </LinearLayout>
 
-
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_2sdp"
@@ -600,11 +600,8 @@
                                 android:text="@string/view_m_transactions"
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_11sdp" />
-
-
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
-
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -1530,10 +1527,11 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_identity_verification_review"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -1541,7 +1539,7 @@
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_15sdp"
                         android:layout_marginRight="@dimen/_10sdp"
-                        android:layout_marginBottom="@dimen/_85sdp"
+                        android:layout_marginBottom="@dimen/_5sdp"
                         app:cardCornerRadius="@dimen/_10sdp">
 
                         <LinearLayout
@@ -1580,49 +1578,28 @@
                                 android:textSize="@dimen/_11sdp" />
 
                             <TextView
+                                android:id="@+id/tv_identity_review_cancel_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_56sdp"
                                 android:fontFamily="@font/opensans_regular"
-                                android:text="Thank you for your submission to the coyni review\nteam. No additional information needed at this time.\nPlease check back here for updates. If you wish to"
+                                android:text="@string/identity_review_cancel_message"
                                 android:textAlignment="center"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_10sdp" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_regular"
-                                    android:text="cancel your merchant application "
-                                    android:textAlignment="center"
-                                    android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_10sdp" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/opensans_regular"
-                                    android:text="@string/clickhere"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/primary_green"
-                                    android:textSize="@dimen/_10sdp" />
-                            </LinearLayout>
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
+
                 <LinearLayout
+                    android:id="@+id/ll_identity_additional_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:visibility="gone">
+
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -1655,15 +1632,16 @@
                                 android:textAlignment="center"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_16sdp" />
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_20sdp"
+                                android:layout_marginBottom="@dimen/_30sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="TThe coyni team requires your additional action\n to further verify you."
                                 android:textAlignment="center"
                                 android:textColor="@color/primary_black"
-                                android:layout_marginBottom="@dimen/_30sdp"
                                 android:textSize="@dimen/_11sdp" />
 
                             <LinearLayout
@@ -1695,13 +1673,61 @@
                             </LinearLayout>
 
 
-
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/ll_identity_verification_failed"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:contentDescription="@string/identify_verification_failed"
+                        android:src="@drawable/ic_failed" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_25sdp"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:text="@string/iv_failed"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_16ssp" />
+
+                    <TextView
+                        android:id="@+id/failedcontent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_21sdp"
+                        android:layout_marginTop="@dimen/_18sdp"
+                        android:layout_marginRight="@dimen/_21sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/iv_verification_failed_content"
+                        android:textAlignment="center"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <TextView
+                        android:id="@+id/contactUSTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="@font/opensans_regular"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:text="@string/contactus"
+                        android:textColor="@color/primary_color"
+                        android:textSize="@dimen/_12ssp" />
+
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
