--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -13,7 +13,14 @@
         android:orientation="vertical"
         android:visibility="visible">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
         <LinearLayout
+            android:id="@+id/topLL"
+            android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/backgrndbtmcornrs"
@@ -48,10 +55,12 @@
                 android:textSize="@dimen/_16ssp" />
         </LinearLayout>
 
-
         <ScrollView
+            android:id="@+id/scrlSV"
+            android:layout_below="@id/topLL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@id/ckbrefund"
             android:scrollbars="none">
 
             <LinearLayout
@@ -60,7 +69,6 @@
                 android:background="@color/et_bg_gray"
                 android:orientation="vertical"
                 android:visibility="visible">
-
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -68,36 +76,20 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginRight="@dimen/_10sdp"
                     android:background="@color/white"
+
                     app:cardCornerRadius="@dimen/_10sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/white"
                         android:orientation="vertical">
 
-                        <RelativeLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_12sdp"
-                            android:background="@color/white"
-                            android:paddingStart="@dimen/_20sdp"
-                            android:paddingEnd="@dimen/_30sdp">
-
-                            <TextView
-                                android:id="@+id/refundCurrencyTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_gravity="center"
-                                android:layout_toLeftOf="@+id/lyAmount"
-                                android:fontFamily="@font/opensans_bold"
-                                android:paddingTop="@dimen/_9sdp"
-                                android:paddingBottom="@dimen/_7sdp"
-                                android:text="$"
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_40ssp"
-                                android:visibility="gone" />
+                            android:gravity="center"
+                          android:orientation="horizontal">
 
                             <LinearLayout
                                 android:id="@+id/lyAmount"
@@ -105,7 +97,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="@dimen/_5sdp"
-                                android:layout_toLeftOf="@+id/imageConvertIV"
                                 android:orientation="horizontal">
 
                                 <EditText
@@ -117,7 +108,9 @@
                                     android:gravity="center_vertical|end"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
-                                    android:maxLength="@string/maxlength"
+                                    android:singleLine="true"
+                                    android:maxLength="8"
+                                    android:clickable="false"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
@@ -136,16 +129,20 @@
                             </LinearLayout>
 
 
-                            <ImageView
-                                android:id="@+id/imageConvertIV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="@dimen/_7sdp"
-                                android:layout_marginTop="@dimen/_8sdp"
-                                android:src="@drawable/ic_download" />
-                        </RelativeLayout>
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/tvError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginRight="@dimen/_10sdp"
+                            android:text="Amount entered exceeds your daily limit"
+                            android:textColor="@color/error"
+                            android:textSize="@dimen/_10ssp"
+                            android:visibility="gone" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -165,6 +162,7 @@
                                 android:visibility="visible" />
 
                             <TextView
+                                android:id="@+id/refundCurrencyTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="3sp"
@@ -175,7 +173,6 @@
                                 android:visibility="visible" />
 
                         </LinearLayout>
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -214,48 +211,55 @@
 
                         </LinearLayout>
 
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_1sdp"
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_15sdp"
-                            android:layout_marginTop="@dimen/_21sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
                             android:layout_marginRight="@dimen/_15sdp"
-                            android:background="@color/blue_light" />
+                            android:background="#d8e2f0" />
                         <LinearLayout
                             android:id="@+id/remarksLL"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_marginTop="@dimen/_10sdp"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/eTremarks"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_54sdp"
-                            android:layout_marginLeft="@dimen/_15sdp"
-                            android:layout_marginTop="@dimen/_12sdp"
-                            android:layout_marginRight="@dimen/_15sdp"
-                            android:layout_marginBottom="@dimen/_91sdp"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:hint="@string/reason_for_refunds"
-                            android:padding="@dimen/_6sdp"
-                            android:textColor="@color/primary_black"
-                            android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_10ssp" />
+                            <TextView
+                                android:id="@+id/eTremarks"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_54sdp"
+                                android:layout_marginLeft="@dimen/_15sdp"
+                                android:layout_marginRight="@dimen/_15sdp"
+                                android:layout_marginBottom="@dimen/_95sdp"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:hint="Requested by Customer "
+                                android:padding="@dimen/_6sdp"
+                                android:textColor="@color/primary_black"
+                                android:textColorHint="@color/light_gray"
+                                android:textSize="@dimen/_10ssp" />
                         </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
 
-                <com.greenbox.coyni.utils.keyboards.CustomKeyboard
-                    android:id="@+id/ckbrefund"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5sdp" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
         </ScrollView>
+                <com.greenbox.coyni.utils.keyboards.CustomKeyboard
+                    android:id="@+id/ckbrefund"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp" />
 
+
+
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
