--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -152,6 +152,7 @@
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
                         android:maxLines="1"
+                       android:maxLength="50"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                         android:singleLine="true"
