--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -9,6 +9,56 @@
     android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/currencyRL"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="@dimen/_14sdp">-->
+
+<!--        <View-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/_41sdp"-->
+<!--            android:layout_marginTop="@dimen/_6sdp"-->
+<!--            android:background="@drawable/disable_bg" />-->
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/countryTIL"-->
+<!--            style="@style/TextInputLayout.OutlinedBox"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="@string/country"-->
+<!--            android:textColorHint="@color/dark_grey"-->
+<!--            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"-->
+<!--            app:boxCornerRadiusBottomStart="@dimen/_10sdp"-->
+<!--            app:boxCornerRadiusTopEnd="@dimen/_10sdp"-->
+<!--            app:boxCornerRadiusTopStart="@dimen/_10sdp"-->
+<!--            app:boxStrokeColor="@color/primary_color"-->
+<!--            app:expandedHintEnabled="false"-->
+<!--            app:hintTextColor="@color/black">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/countryET"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:clickable="false"-->
+<!--                android:cursorVisible="false"-->
+<!--                android:enabled="false"-->
+<!--                android:focusable="false"-->
+<!--                android:fontFamily="@font/opensans_semibold"-->
+<!--                android:hint="@string/countryhint"-->
+<!--                android:imeOptions="actionDone"-->
+<!--                android:inputType="text"-->
+<!--                android:maxLength="30"-->
+<!--                android:padding="@dimen/_12sdp"-->
+<!--                android:text="United States"-->
+<!--                android:textColor="@color/dark_grey"-->
+<!--                android:textColorHint="@color/light_gray"-->
+<!--                android:textSize="@dimen/_12ssp" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    </RelativeLayout>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -791,7 +841,7 @@
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_39sdp"
+                        android:layout_height="@dimen/_41sdp"
                         android:layout_marginTop="@dimen/_6sdp"
                         android:background="@drawable/disable_bg" />
 
