--- a/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
+++ b/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -10,49 +10,71 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/outline_box_unfocused"
-        android:gravity="center"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="horizontal">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/ssnType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="SSN"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+        <RelativeLayout
+            android:id="@+id/weightRL"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="vertical">
 
             <View
-                android:layout_width="1.5dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:background="@color/light_gray" />
-        </LinearLayout>
+                android:id="@+id/anchorView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
 
-        <EditText
+            <LinearLayout
+                android:id="@+id/ssnDDLL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:gravity="center">
+
+
+                <TextView
+                    android:id="@+id/ssnType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="SSN"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <ImageView
+                    android:id="@+id/dropdownIV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_chevron_down" />
+
+                <View
+                    android:layout_width="1.5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/_7sdp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:background="@color/light_gray" />
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/ssnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:autofillHints="AUTOFILL_HINT_SMS_OTP"            android:background="@android:color/transparent"
+            android:layout_weight="1"
+            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+            android:background="@android:color/transparent"
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
-            android:hint="•••-•••-••••"
+            android:hint="•••-••-••••"
             android:imeOptions="actionDone"
             android:importantForAutofill="noExcludeDescendants"
             android:inputType="numberPassword"
-            android:maxLength="9"
             android:maxLines="1"
             android:padding="14dp"
             android:singleLine="true"
@@ -60,6 +82,40 @@
             android:textColorHint="@color/light_gray"
             android:textCursorDrawable="@drawable/cursor_color"
             android:textSize="@dimen/_12ssp"
-            app:mask="_________" />
+            app:mask="___-__-____" />
+
+        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
+            android:id="@+id/einET"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+            android:background="@android:color/transparent"
+            android:digits="0123456789"
+            android:fontFamily="@font/opensans_semibold"
+            android:hint="••-•••••••"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="noExcludeDescendants"
+            android:inputType="numberPassword"
+            android:maxLines="1"
+            android:padding="14dp"
+            android:singleLine="true"
+            android:textColor="@color/primary_black"
+            android:textColorHint="@color/light_gray"
+            android:textCursorDrawable="@drawable/cursor_color"
+            android:textSize="@dimen/_12ssp"
+            android:visibility="gone"
+            app:mask="__-_______" />
+
+        <ImageView
+            android:id="@+id/viewSSNIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:background="@drawable/ic_eyeclose"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingBottom="@dimen/_3sdp" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
